[gd_scene load_steps=8 format=3 uid="uid://codux7uwyk6wa"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_7ge3k"]
[ext_resource type="Texture2D" uid="uid://dgrjexhd563we" path="res://art/skeleton.png" id="2_lnf2f"]
[ext_resource type="PackedScene" uid="uid://02381nc0lj5f" path="res://scenes/ui/stats_ui.tscn" id="3_40jfj"]
[ext_resource type="Texture2D" uid="uid://bb3rcs5nqntir" path="res://art/original_art/arrow.png" id="3_srnj7"]
[ext_resource type="PackedScene" uid="uid://wdx0jcyi451k" path="res://scenes/ui/intent_ui.tscn" id="5_cvdml"]
[ext_resource type="PackedScene" uid="uid://b1xgrhkvg5e67" path="res://scenes/ui/StatusesBar.tscn" id="6_c0ptl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wawtc"]

[node name="Enemy" type="Area2D" groups=["enemies"]]
scale = Vector2(2, 2)
collision_layer = 4
script = ExtResource("1_7ge3k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lnf2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wawtc")

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 0)
rotation = -1.5708
texture = ExtResource("3_srnj7")

[node name="StatsUi" parent="." instance=ExtResource("3_40jfj")]
offset_left = -29.0
offset_top = 8.0
offset_right = 25.0
offset_bottom = 24.0
scale = Vector2(1.01257, 1)
theme_override_constants/separation = 1

[node name="IntentUi" parent="." instance=ExtResource("5_cvdml")]
offset_top = -28.0
offset_bottom = -14.0

[node name="StatusesBar" parent="." instance=ExtResource("6_c0ptl")]
offset_left = -35.0
offset_top = 24.0
offset_right = 36.0
offset_bottom = 32.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
